Fix: SonarQube Quality Gate Failed - agent_sdlc - 37b6c75
Automated fixes for SonarQube issues in ADP-6

- Fix 15 issue(s): BUG, BUG, VULNERABILITY, VULNERABILITY, VULNERABILITY, CODE_SMELL, CODE_SMELL, CODE_SMELL, CODE_SMELL, CODE_SMELL, CODE_SMELL, CODE_SMELL, CODE_SMELL, SECURITY_HOTSPOT, SECURITY_HOTSPOT
- Fix 2 issue(s): CODE_SMELL, CODE_SMELL

JIRA: https://maplelabs.atlassian.net/browse/ADP-6